--- a/templates/posts.html
+++ b/templates/posts.html
@@ -27,7 +27,7 @@
       {% endif %}   
 
       <p>{{ post.content}}</p>
-      <a href="/posts/delete/{{post.id}}">Delete</a>
+      <a href="/posts/delete/{{post.id}}">Delete</a>&nbsp;
       <a href="/posts/edit/{{post.id}}">Edit</a>
    {% endfor %}
    
