--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Contact us</a>
+                  <a class="nav-link" href="#">Post</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link disabled">About</a>
@@ -35,9 +35,9 @@
                   <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
                      aria-expanded="false">Contact us</a>
                   <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="www.linkedin.com/in/yaw-anokye-ba539ba1/">linkedin</a></li>
-                     <li><a class="dropdown-item" href="#">Another action</a></li>
-                     <li><a class="dropdown-item" href="#">Something else here</a></li>
+                     <li><a class="dropdown-item" href="https://www.linkedin.com/in/yaw-anokye/">Linkedin</a></li>
+                     <li><a class="dropdown-item" href="https://www.//github.com/Anokye-Yaw">Github</a></li>
+                     <li><a class="dropdown-item" href="https://www.facebook.com/Anokye.Yaw.53">Facebook</a></li>
                   </ul>
                </li>
             </ul>
@@ -48,7 +48,9 @@
       </div>
    </nav>
    <div class="container">
-      {% block body %}{% endblock %}
+      {% block body %}
+      
+      {% endblock %}
    </div>
 
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
