Add files via gitbash

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
             <p>Ronaldo was far from a Perez favourite, which may come as a shock. The pair were involved in issues behind the scenes, which on occasion were aired in public. The relationship grew strained in the final year after it is claim a contract promise was not delivered on following Madrid's Champions League success in Cardiff in 2017.
                 After their victory in Kyiv a year later, Ronaldo spoke openly about pursuing pastures new. Those comments were not well received by Perez, who said: "Now is not the time for individual issues; the club is more important than anyone. I am glad he has five European Cups, like me. The same thing is heard every summer and then nothing happens."
             </p>
-            <p>Visit us at our website <a href="https://www.realmadrid.com/en" >real madred</a>
+            <p>Visit us at our website <a href="https://www.realmadrid.com/en" >real madrid</a>
             </p>
             <p>
                 <a class="btn btn-primary" href="/posts" role="button">Go to Post
