--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="#">Post</a>
+                  <a class="nav-link" href="/posts">Post</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link disabled">About</a>
@@ -35,9 +35,9 @@
                   <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
                      aria-expanded="false">Contact us</a>
                   <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="https://www.linkedin.com/in/yaw-anokye/">Linkedin</a></li>
-                     <li><a class="dropdown-item" href="https://www.//github.com/Anokye-Yaw">Github</a></li>
-                     <li><a class="dropdown-item" href="https://www.facebook.com/Anokye.Yaw.53">Facebook</a></li>
+                     <li><a class="dropdown-item" href="https://www.linkedin.com/in/yaw-anokye/" target="_blank">Linkedin</a></li>
+                     <li><a class="dropdown-item" href="https://www.//github.com/Anokye-Yaw" target="_blank">Github</a></li>
+                     <li><a class="dropdown-item" href="https://www.facebook.com/Anokye.Yaw.53" target="_blank">Facebook</a></li>
                   </ul>
                </li>
             </ul>
