--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
          <div class="collapse navbar-collapse" id="navbarsExample01">
             <ul class="navbar-nav me-auto mb-2">
                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="/">Home</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="/posts">Post</a>
