--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,27 +1,24 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Edit Posts</title>
+<title>New Post</title>
 {% endblock %}
 
 
 {% block body %}
-<h1>Editing Posts</h1>
+<h1>New Post</h1>
 <hr>
-<h2>Edit:</h2>
-<form action='/posts/edit/{{post.id}}' method='POST'>
-
-   <label for="title">Title:</label>
-   <input class="form-control" value="{{post.title}}" type='text' name='title' id='title' placeholder="Enter Title"
-      aria-label="title"><br>
-   <label for="author">Author:</label>
-   <input class="form-control" type='text' value="{{post.author}}" name='author' id='author' placeholder="Enter Author"
-      aria-label="author"><br>
-   <label for="content">Post:</label>
-   <textarea class="form-control" name='content' id='content'  rows="3">{{post.content}}</textarea>
-   <br>
-   <input type='submit' value='Save'>
-</form>
+<h2>Create A New Post</h2>
+<form action='/posts' method='POST'>
+    <label for="title">Title:</label>
+    <input class="form-control" type='text' name='title' id='title' placeholder="Enter Title" aria-label="title"><br>
+    <label for="author">Author:</label>
+    <input class="form-control" type='text' name='author' id='author' placeholder="Enter Author" aria-label="author"><br>
+    <label for="content">Post:</label>
+    <textarea class="form-control" name='content' id='content' rows="3"></textarea>
+    <br>
+    <input type='submit' value='Post'>
+ </form>
 <hr>
 
 
