--- a/templates/posts.html
+++ b/templates/posts.html
@@ -6,20 +6,12 @@
 
 
 {% block body %}
-<h1>All Posts</h1>
+<div>
+   <h1 style="display:inline">All Posts</h1>
+   <a style="display:inline" href="/posts/new" class="btn btn-success float-right">+ New Post</a>   
+</div>
 <hr>
-<h2>Create a New Blog Post:</h2>
-<form action='/posts' method='POST'>
-   <label for="title">Title:</label>
-   <input class="form-control" type='text' name='title' id='title' placeholder="Enter Title" aria-label="title"><br>
-   <label for="author">Author:</label>
-   <input class="form-control" type='text' name='author' id='author' placeholder="Enter Author" aria-label="author"><br>
-   <label for="content">Post:</label>
-   <textarea class="form-control" name='content' id='content' rows="3"></textarea>
-   <br>
-   <input type='submit' value='Post'>
-</form>
-<hr>
+
 
 {% for post in posts %}
 <h2>{{ post.title}}</h2>
