add files vit gitbash

--- a/templates/posts.html
+++ b/templates/posts.html
@@ -8,7 +8,7 @@
 {% block body %}
 <div>
    <h1 style="display:inline">All Posts</h1>
-   <a style="display:inline" href="/posts/new" class="btn btn-success float-right">+ New Post</a>   
+   <a style="display:inline" href="/posts/new" class="btn btn-success float-end">+ New Post</a>   
 </div>
 <hr>
 
