--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                   <a class="nav-link active" aria-current="page" href="/">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="/posts">Post</a>
+                  <a class="nav-link" href="/posts"  target="_blank">Post</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link disabled">About</a>
